--- a/contato.html
+++ b/contato.html
@@ -26,6 +26,12 @@
     
             <div class="content">
 
+                <p><strong>(31) 9 9999-9999</strong></p>
+                <p><strong>trilhahtml@dio.com.br</strong></p>
+                <p><strong>Rua Trilha, nº 25, Bairro HTML, Belo Horizonte, Minas Gerais.</strong></p>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3749.8209921284824!2d-44.02402492395897!3d-19.97402903968267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa6be09f5f345e5%3A0x95e7b181f6cf1ca3!2sViaShopping%20Barreiro!5e0!3m2!1spt-BR!2sbr!4v1770227054619!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                 <form method="get" autocomplete="off" action="#">
 
                     <label for="name">Nome: </label><input type="text" id="name" name="name"><br>
@@ -34,7 +40,7 @@
                     <label for="mensagem">Mensagem: </label>
                     <textarea id="mensagem" name="mensagem" rows="5" cols="33"></textarea><br><br>
                     
-                    <button type="submit">Enviar</button><br><br>
+                    <button type="submit">Enviar</button>
                     <button type="reset">Limpar</button>
 
                 </form>
